# rust-example

./: Shuttle.toml
api/lib/: Cargo.toml
api/lib/src/: health.rs
api/lib/src/film_repository/: mod.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
shared/: Cargo.toml
shared/src/: models.rs
