[package]
edition = "2021"
name = "api-shuttle"
version = "0.1.0"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = {version = "0.25.0", features = ["postgres"]}
sqlx = {version = "0.7.1", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "json"]}
tokio = "1.26.0"
tracing = "0.1"
api-lib = { path = "../lib" }
# shared
shared = { path = "../../shared" }
